--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="#home" class="navbar__logo">Gains Tracker</a>
+            <a href="#home" class="navbar__logo">
+                <img src="img/whey-protein.png" alt="XD" class="navbar__logo__img">Gains Tracker</a>
             <ul class="navbar__menu">
-                <li class="navbar__item">Diet</li>
-                <li class="navbar__item">Training</li>
-                <li class="navbar__item">About</li>
-                <li class="navbar__item">Get Started</li>
+                <li class="navbar__item"><a href="#Diet">Diet</a></li>
+                <li class="navbar__item"><a href="#Training">Training</a></li>
+                <li class="navbar__item"><a href="#About">About</a></li>
+                <li class="navbar__item"><a href="#Get Started">Get Started</a></li>
                 <li class="navbar__item">|</li>
-                <li class="navbar__item">Log In</li>
+                <li class="navbar__item"><a href="#Log In">Log In</a></li>
             </ul>
-        </div>
+        </div>     
     </nav>
+    <img src="img/2022-10-21 22_14_28-Window.png" alt="" class="test">
+
 </body>
 </html>
