--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="navbar__container">
             <a href="#home" class="navbar__logo">
-                <img src="img/whey-protein.png" alt="XD" class="navbar__logo__img">Gains Tracker</a>
+                <img src="img/Logo.png" alt="XD" class="navbar__logo__img"></a>
             <ul class="navbar__menu">
                 <li class="navbar__item"><a href="#Diet">Diet</a></li>
                 <li class="navbar__item"><a href="#Training">Training</a></li>
