--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <a href="#home" class="navbar__logo">
                 <img src="img/Logo.png" alt="XD" class="navbar__logo__img"></a>
             <ul class="navbar__menu">
-                <li class="navbar__item"><a href="#Diet">Diet</a></li>
+                <li class="navbar__item"><a href="#Diet">About</a></li>
                 <li class="navbar__item"><a href="#Training">Training</a></li>
-                <li class="navbar__item"><a href="#About">About</a></li>
+                <li class="navbar__item"><a href="#About">Diet</a></li>
                 <li class="navbar__item"><a href="#Get Started">Get Started</a></li>
                 <li class="navbar__item">|</li>
                 <li class="navbar__item"><a href="#Log In">Log In</a></li>
