--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         </div>     
     </nav>
     <img src="img/2022-10-21 22_14_28-Window.png" alt="" class="test">
-
+    <div class="content__container">
+    <div class="About">   
+       <div class="content__img">Element 1</div>
+       <div class="content__txt">Lorem ipsum dolor sit amet.</div>
+    </div>
+    <div class="Training">
+        <div class="content__txt">Lorem ipsum dolor sit amet.</div>
+        <div class="content__img">Element 2</div>
+    </div>
+    <div class="Diet">
+        <div class="content__img">Element 3</div>
+        <div class="content__txt">Lorem ipsum dolor sit amet.</div>
+    </div>
+</div>
 </body>
 </html>
