--- a/index.html
+++ b/index.html
@@ -24,18 +24,32 @@
     </nav>
     <img src="img/2022-10-21 22_14_28-Window.png" alt="" class="test">
     <div class="content__container">
-    <div class="About">   
-       <div class="content__img">Element 1</div>
-       <div class="content__txt">Lorem ipsum dolor sit amet.</div>
+    <div class="About__container">   
+       <div class="content__img"></div>
+       <div class="content__txt">
+        <h1>GainsTracker</h1>
+        <p>GainsTracker is an free app which give us posiblity to plan your training&diet</p>
+       </div>
     </div>
-    <div class="Training">
-        <div class="content__txt">Lorem ipsum dolor sit amet.</div>
-        <div class="content__img">Element 2</div>
+    <div class="Training__container">
+        <div class="content__txt">
+            <h1>Plan your Trainig</h1>
+            <p>With GainsTracker planing your training will be easier than even before</p>
+        </div>
+        <div class="content__img"></div>
     </div>
-    <div class="Diet">
-        <div class="content__img">Element 3</div>
-        <div class="content__txt">Lorem ipsum dolor sit amet.</div>
+    <div class="Diet__container">
+        <div class="content__img"></div>
+        <div class="content__txt">
+            <h1>Plan your diet</h1>
+            <p>With GainsTracker planing your diet will be easier than even before</p>
+        </div>
     </div>
+
+ 
 </div>
+<footer class="footer">
+    dsds
+        </footer>
 </body>
 </html>
